[gd_scene load_steps=2 format=3 uid="uid://c1t45s4fo2kuk"]

[ext_resource type="Script" path="res://Scenes/StateMachine Manage/States/Player states/P_hurt.gd" id="1_yww2q"]

[node name="P_hurt" type="Node2D"]
script = ExtResource("1_yww2q")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Flinch_time" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Flash_time" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Flinch_time" to="." method="_on_flinch_time_timeout"]
[connection signal="timeout" from="Flash_time" to="." method="_on_flash_time_timeout"]
